try to look for correlation or regression with randomforest